--- a/templates/modify_word.html
+++ b/templates/modify_word.html
@@ -28,14 +28,14 @@
 <form action="{ url 'modify' }" method="post">{% csrf_token %}
     <div class="form-group">
         <label> Word </label>
-        <input type="text" class="form-control" name="word" aria-describedby="emailHelp" value="{{ wd.word }}" autofocus required>
+        <input type="text" class="form-control" name="word" aria-describedby="emailHelp" value="{{ word_and_definition.word }}" autofocus required>
         <small id="emailHelp" class="form-text text-muted">To write word and definition, that you want to
             add</small>
     </div>
 
     <div class="form-group">
         <label for="exampleInputPassword1"> Definition </label>
-        <input type="text" name="definition" class="form-control" value="{{ wd.definition }}" required>
+        <input type="text" name="definition" class="form-control" value="{{ word_and_definition.definition }}" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 
