--- a/templates/table_pages/table.html
+++ b/templates/table_pages/table.html
@@ -1,23 +1,14 @@
-{% extends "index.html" %}
+{% extends "table_pages/table_index.html" %}
 
 {% block body %}
-<br>
-<br>
-<br>
-<header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'logout' %}">Log Out</a>
-                <ul></ul>
-                <a class="btn btn-outline-success my-2 my-sm-0" href="https://t.me/Django_Pycab_bot" target="_blank">Telegram Bot</a>
-    </nav>
-</header>
+
 {% if messages %}
-    {% for message in messages %}
-        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
-    {% endfor %}
+{% for message in messages %}
+<div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+{% endfor %}
 {% endif %}
-<form action="{% url 'table' %}" method="post" >{% csrf_token %}
+
+<form action="{% url 'table' %}" method="post">{% csrf_token %}
     <div class="form-group">
         <label> Word </label>
         <input type="text" class="form-control" name="word" placeholder="Enter new word" required>
@@ -37,7 +28,7 @@
             <thead>
                 <tr>
                     <th width="15%" scope="col">Word</th>
-                    <th width="70%"scope="col">Definition</th>
+                    <th width="70%" scope="col">Definition</th>
                 </tr>
 
             </thead>
@@ -49,12 +40,12 @@
                         <td> {{ record.definition_of_word_in_whole }} </td>
                         <td>
                             <a class="btn btn-success" href="{% url 'modify' record.id_of_word_in_whole %}">
-                            <i class="fas fa-edit">modify</i></a> <!-- id=p.id_in_whole -->
-                            <td>   
-                                <a class="btn btn-danger" href="{% url 'delete' record.id_of_word_in_whole %}">
+                                <i class="fas fa-edit">modify</i></a> <!-- id=p.id_in_whole -->
+                        <td>
+                            <a class="btn btn-danger" href="{% url 'delete' record.id_of_word_in_whole %}">
                                 <i class="far fa-trash-alt">delete</i></a>
-                            </td>
-                        </td>            
+                        </td>
+                        </td>
                     </form>
                 </tr>
                 {% endfor %}
@@ -63,7 +54,7 @@
     </div>
 </div>
 
-{% for record in records %} 
+{% for record in records %}
 
 {% endfor %}
 {% endblock %}
