--- a/templates/auth_pages/user_login.html
+++ b/templates/auth_pages/user_login.html
@@ -5,8 +5,19 @@
 {% load static %}
 
 <body>
-
+  {% if messages %}
+  {% for message in messages %}
+  <div class="container-fluid p-0">
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+      </button>
+      {{ message }}
+    </div>
+  </div>
+  {% endfor %}
+  <br><br><br><br>
+  {% else %}
   <br><br><br><br><br><br>
+  {% endif %}
   <div>
     <div class="container">
       <div class="text-center">
