--- a/templates/auth_pages/user_register.html
+++ b/templates/auth_pages/user_register.html
@@ -7,10 +7,17 @@
 <body>
   {% if messages %}
   {% for message in messages %}
-      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+  <div class="container-fluid p-0">
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+      </button>
+      {{ message }}
+    </div>
+  </div>
   {% endfor %}
-{% endif %}
+  <br><br><br><br>
+  {% else %}
   <br><br><br><br><br><br>
+  {% endif %}
   <div>
     <div class="container">
       <div class="text-center">
