--- a/templates/table_pages/modify_word.html
+++ b/templates/table_pages/modify_word.html
@@ -4,18 +4,17 @@
 <a href="{% url 'table' %}">Come Back </a>
 <br>
 <br>
-<form action="{ url 'modify' }" method="post">{% csrf_token %}
+<form action="{% url 'modify' pk=pk %}" method="post">{% csrf_token %}
     <div class="form-group">
-        <label> Word </label>
-        <input type="text" class="form-control" name="word" aria-describedby="emailHelp"
-            value="{{ word_and_definition.word }}" autofocus required>
-        <small id="emailHelp" class="form-text text-muted">To write word and definition, that you want to
+        {{ form.word_in_whole.label_tag }}
+        {{ form.word_in_whole }}
+            <small class="form-text text-muted">To write word and definition, that you want to
             add</small>
     </div>
 
     <div class="form-group">
-        <label for="exampleInputPassword1"> Definition </label>
-        <input type="text" name="definition" class="form-control" value="{{ word_and_definition.definition }}" required>
+        {{ form.definition_of_word_in_whole.label_tag }}
+        {{ form.definition_of_word_in_whole }}
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 
