--- a/templates/auth_pages/user_login.html
+++ b/templates/auth_pages/user_login.html
@@ -38,7 +38,7 @@
             <p>
               <a href="{% url 'reg' %}">I want to registrate</a>
             <p>
-              <a href="{% url 'passwordstepone' %}">I forgot my password</a>
+              <a href="{% url 'password_step_first' %}">I forgot my password</a>
           </form>
         </div>
       </div>
