--- a/templates/passwordsteplust.html
+++ b/templates/passwordsteplust.html
@@ -11,7 +11,7 @@
           <h2 class="form-signin-heading">Enter your's new password</h2>
           <br>
           {% csrf_token %}          
-          <form class="form-signin" action="{% url 'passwordsteplust' %}" method="POST">
+          <form class="form-signin" action="{% url 'password_step_lust' %}" method="POST">
             {% csrf_token %}
             <div class="form-outline mb-4 mx-auto" style="width: 200px;">
               {% csrf_token %}
