--- a/templates/passwordsteptwo.html
+++ b/templates/passwordsteptwo.html
@@ -12,7 +12,7 @@
        </style>
     <h2 class="form-signin-heading">Good boy. <br><br> Check your's email! <br> Wait for code. <br> And put this code to form below.</h2>
 <br>
-{% csrf_token %}<form method="POST" action="{% url 'passwordsteptwo' %}">{% csrf_token %}
+{% csrf_token %}<form method="POST" action="{% url 'password_step_second' %}">{% csrf_token %}
     {% csrf_token %}<input type="text" name="password" required />{% csrf_token %}
 <br>
 {{ fake }}
