correct email settings

--- a/templates/password_step_second.html
+++ b/templates/password_step_second.html
@@ -17,6 +17,6 @@
 <br>
 {{ fake }}
 <br>
-<a href="#" class="" style="color: red">Come back to authorization page </a>
+<a href="{% url 'reg' %}" class="" style="color: red">Come back to authorization page </a>
 </div>
 {% endblock %}
